--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "expo": "^23.0.4",
     "lodash.omit": "^4.5.0",
+    "moment": "^2.20.1",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.50.3",
